syntax="proto3";

package users.v1;

import "google/api/annotations.proto";
// import "google/protobuf/field_mask.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "tagger/tagger.proto";

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = ".;pb";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
  }
  schemes: HTTP
  base_path: "/ms-users"
  consumes: "application/json"
  produces: "application/json"
  security_definitions: {
    security: {
      key: "X-User-Id"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "X-User-Id"
        description: "Authentication token, prefixed by Bearer word: Bearer <token>"
      }
    }
  }
  // security: {
  //   security_requirement: {
  //     key: "X-User-Id"
  //   }
  // }
};

service UserService {

  // Creates new profile with email-password identity.
  //
  // Access: any
  //
  // For creating new profile you have to provide:
  // - email (required);
  // - password (required);
  // - first_name (optional);
  // - last_name (optional);
  //
  rpc CreateEmailPassIdentity(CreateEmailPassIdentityRequest) returns (CreateEmailPassIdentityResponse) {
    option (google.api.http) = {
      post: "/v1/identities/email-pass"
      body: "*"
    };
  }

  // Authenticate users by email-pasword.
  //
  // Access: any
  //
  rpc AuthEmailPass(AuthEmailPassRequest) returns (AuthEmailPassResponse) {
    option (google.api.http) = {
      post: "/v1/auth/email-pass"
      body: "*"
    };
  }

  // Confirm universal confirm link
  //
  // Access: any
  //
  // It's possible to confirm different type of operations.
  //
  rpc Confirm(ConfirmRequest) returns (ConfirmResponse) {
    option (google.api.http) = {
      get: "/v1/identities/confirm/{code}"
    };
  }

  // Profile detail info.
  //
  // Access: X-User-Id
  //
  // Profile returns profile by profile_id.
  //
  rpc Profile (ProfileRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      get: "/v1/profile"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {security_requirement: {key: "X-User-Id"}}
    };
  }
}

// CreateEmailPassIdentity

message CreateEmailPassIdentityRequest {
  string email      = 1 [(tagger.tags) = "validate:\"required,email\"" ];
  string password   = 2 [(tagger.tags) = "validate:\"required,min=8,max=50\"" ];
  string first_name = 3 [(tagger.tags) = "validate:\"min=3,max=20\"" ];
  string last_name  = 4 [(tagger.tags) = "validate:\"min=3,max=20\"" ];
}

message CreateEmailPassIdentityResponse {
  string user_id = 1;
}

// AuthEmailPass

message AuthEmailPassRequest {
  string email      = 1 [(tagger.tags) = "validate:\"required,email\"" ];
  string password   = 2 [(tagger.tags) = "validate:\"required,min=8,max=50\"" ];
}

message AuthEmailPassResponse {
  string access_token = 1;
}

// Confirm

message ConfirmRequest {
  string code = 1;
}

message ConfirmResponse {}

// Profile

message ProfileRequest {}

message ProfileResponse {
  string user_id    = 1;
  string email      = 2;
  string first_name = 3;
  string last_name  = 4;
}